--- a/assets/tabs.css
+++ b/assets/tabs.css
@@ -110,7 +110,7 @@
   border-top-width: 0;
   border-bottom-width: 0;
   transition: all var(--animation-duration) var(--transition-function-ease-out),
-      max-height var(--animation-duration) var(--transition-function-ease-out);;
+      max-height var(--animation-duration) var(--transition-function-ease-out);
 }
 
 .tabs__select #tabs-select-opener:checked ~ .tabs__select-drop {
