--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,21 +1,23 @@
 {{ "header.css" | asset_url | stylesheet_tag }}
 {{ "mega-menu.css" | asset_url | stylesheet_tag }}
 
-{%- assign search_placeholder    = section.settings.search_placeholder -%}
+{%- assign sticky_header         = section.settings.sticky_header -%}
 {%- assign logo                  = section.settings.logo -%}
 {%- assign custom_title          = section.settings.custom_title -%}
-{%- assign menu_opener_mobile    = section.settings.menu_opener_mobile -%}
 {%- assign menu                  = section.settings.menu -%}
-{%- assign menu_style            = section.settings.menu_style -%}
-{%- assign menu_position         = section.settings.menu_position -%}
-{%- assign menu_position_mobile  = section.settings.menu_position_mobile -%}
+{%- assign menu_opener_mobile    = section.settings.menu_opener_mobile -%}
+{%- assign menu_opener_label     = section.settings.menu_opener_label -%}
 {%- assign color_palette         = section.settings.color_palette -%}
+{%- assign show_search           = section.settings.show_search -%}
+{%- assign search_placeholder    = section.settings.search_placeholder -%}
+{%- assign show_picker           = section.settings.show_picker -%}
+{%- assign transparent_bg        = section.settings.transparent_bg -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
 {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-{%- assign sticky_header         = section.settings.sticky_header -%}
-{%- assign show_search           = section.settings.show_search -%}
+{%- assign login_placeholder     = section.settings.login_placeholder -%}
+{%- assign signup_placeholder    = section.settings.signup_placeholder -%}
 {%- assign image_placeholder     = settings.image_placeholder -%}
 {%- assign facebook              = settings.social_facebook_link -%}
 {%- assign instagram             = settings.social_instagram_link -%}
@@ -65,43 +67,6 @@
     {%- when 'large' -%}
       --padding-bottom-mobile: 20px;
   {%- endcase -%}
-
-  {%- case menu_position -%}
-    {%- when 'left' -%}
-      --header-justify-content: flex-start;
-    {%- when 'left-center' -%}
-      --header-justify-content: center;
-    {%- when 'left-right' -%}
-      --header-justify-content: flex-end;
-    {%- when 'left-below' -%}
-      --header-justify-content: flex-start;
-    {%- when 'center-left' -%}
-      --header-justify-content: flex-start;
-  {%- endcase -%}
-
-  {%- if menu_position_mobile == "top" -%}
-    --menu-transform: translate(0, -100%);
-    --menu-width: 100%;
-    --menu-left: 0;
-    --menu-right: 0;
-    --menu-max-height: 0;
-  {%- endif -%}
-
-  {%- if menu_position_mobile == "side" and menu_opener_mobile == "left" -%}
-    --menu-transform: translate(-100%, 0);
-    --menu-width: 0;
-    --menu-left: 0;
-    --menu-right: auto;
-    --menu-max-height: none;
-  {%- endif -%}
-
-  {%- if menu_position_mobile == "side" and menu_opener_mobile == "right" -%}
-    --menu-transform: translate(100%, 0);
-    --menu-width: 0;
-    --menu-left: auto;
-    --menu-right: 0;
-    --menu-max-height: none;
-  {%- endif -%}
 {%- endcapture -%}
 
 {%- include 'variables-mini-cart' -%}
@@ -126,17 +91,40 @@
   {%- endif -%}
 {%- endcapture -%}
 
+{% comment %} Login buttons component {% endcomment %}
+{%- capture header_login -%}
+  <div class="header__login">
+    <a href="" class="header__login-button button button--outlined button--large">
+      {%- render 'icon-user' -%}
+      {%- if login_placeholder != blank -%}
+        {{- login_placeholder -}}
+      {%- else -%}
+        Log in
+      {%- endif -%}
+    </a>
+    <a href="" class="header__login-button button button--outlined button--large">
+      {%- if signup_placeholder != blank -%}
+        {{- signup_placeholder -}}
+      {%- else -%}
+        Create account
+      {%- endif -%}
+    </a>
+  </div>
+{%- endcapture -%}
+
 {% comment %} Mobile menu social component {% endcomment %}
-{%- capture social_icons -%}
-  {%- if facebook != blank or instagram != blank or twitter != blank or linkedin != blank or pinterest != blank or tiktok != blank or tumblr != blank or snapchat != blank or youtube != blank or vimeo != blank -%}
-    <div class="menu__bottom">
+{%- capture menu_bottom -%}
+  <div class="menu__bottom">
+    {{- header_login -}}
+
+    {%- if facebook != blank or instagram != blank or twitter != blank or linkedin != blank or pinterest != blank or tiktok != blank or tumblr != blank or snapchat != blank or youtube != blank or vimeo != blank -%}
       <div class="menu__icons">
         <div class="menu__social">
           {%- include "socials" -%}
         </div>
       </div>
-    </div>
-  {%- endif -%}
+    {%- endif -%}
+  </div>
 {%- endcapture -%}
 
 {% comment %} Menu component {% endcomment %}
@@ -144,21 +132,22 @@
   <div class="header__nav-wrapper">
     {%- if menu != blank -%}
       <input type="checkbox" id="mobile-menu-opener" style="display: none;">
-      <label for="mobile-menu-opener" class="menu__opener">
-        <span></span>
+      <label for="mobile-menu-opener" class="menu__opener button button--primary button--small">
+        <b>{{- menu_opener_label -}}</b>
+        <i>
+          <span></span>
+        </i>
       </label>
 
-      <nav class="header__nav menu{% if padding_bottom != blank %} menu--position{% endif %}{% if menu_style == "horizontal" %} menu-wide{% endif %}{% if menu_position_mobile == "top" %} mobile-menu-top{%- endif -%}"
-           style="display: none;"
-      >
+      <nav class="header__nav menu" style="display: none;">
         <div class="menu__wrapper">
           <ul class="header__nav-list menu__list">
+            <li class="menu__label"><b>{{- menu_opener_label -}}</b></li>
             {%- for link in menu.items -%}
               {%- assign link_index = forloop.index -%}
 
               {%- if link != blank -%}
                 <li class="menu__item{% if link.items_count > 0 %} has-dropdown{%- endif -%}">
-
                   {%- if link.items_count > 0 -%}
                     <input type="checkbox" id="dropdown-menu-trigger-{{- link_index -}}" style="display: none;">
                     <label for="dropdown-menu-trigger-{{- link_index -}}" class="menu__dropdown-opener">
@@ -175,15 +164,12 @@
                   {%- if link.items_count > 0 -%}
                     <div class="menu__dropdown" style="display: none;">
                       <div class="menu__dropdown-wrapper">
-
-                        {%- unless menu_position_mobile == "top" -%}
-                          <label for="dropdown-menu-trigger-{{- link_index -}}" class="menu__dropdown-opener">
-                            <i class="menu__item-icon">
-                              {%- render 'icon-arrow-down' -%}
-                            </i>
-                            {{- link.title -}}
-                          </label>
-                        {%- endunless -%}
+                        <label for="dropdown-menu-trigger-{{- link_index -}}" class="menu__dropdown-opener menu__dropdown-closer">
+                          <i class="menu__item-icon">
+                            {%- render 'icon-arrow-down' -%}
+                          </i>
+                          {{- link.title -}}
+                        </label>
 
                         <ul class="menu__dropdown-list">
                           {%- for childlink in link.items -%}
@@ -191,6 +177,7 @@
 
                             {%- if childlink != blank -%}
                               <li class="menu__dropdown-item">
+
                                 {%- if childlink.items_count > 0 -%}
                                   <input type="checkbox" id="dropdown-childmenu-trigger-{{- link_index -}}-{{- childlink_index -}}" style="display: none;">
                                   <label for="dropdown-childmenu-trigger-{{- link_index -}}-{{- childlink_index -}}" class="menu__dropdown-opener">
@@ -207,15 +194,12 @@
                                 {%- if childlink.items_count > 0 -%}
                                   <div class="menu__dropdown">
                                     <div class="menu__dropdown-wrapper">
-
-                                      {%- unless menu_position_mobile == "top" -%}
-                                        <label for="dropdown-childmenu-trigger-{{- link_index -}}-{{- childlink_index -}}" class="menu__dropdown-opener">
-                                          <i class="menu__item-icon">
-                                            {%- render 'icon-arrow-down' -%}
-                                          </i>
-                                          {{- childlink.title -}}
-                                        </label>
-                                      {%- endunless -%}
+                                      <label for="dropdown-childmenu-trigger-{{- link_index -}}-{{- childlink_index -}}" class="menu__dropdown-opener menu__dropdown-closer">
+                                        <i class="menu__item-icon">
+                                          {%- render 'icon-arrow-down' -%}
+                                        </i>
+                                        {{- childlink.title -}}
+                                      </label>
 
                                       <ul class="menu__dropdown-list">
                                         {%- for grandchildlink in childlink.items -%}
@@ -247,7 +231,7 @@
             {%- endfor -%}
           </ul>
 
-          {{- social_icons -}}
+          {{- menu_bottom -}}
         </div>
       </nav>
     {%- endif -%}
@@ -293,12 +277,12 @@
 {%- endcapture -%}
 
 <div
-  class="header__inner{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if menu_position == 'center-left' %} header-logo-centered{%- endif -%}{% if menu_position == 'left-below' %} header-menu-bottom{%- endif -%}"
+  class="header__inner{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}"
   style="{{- variables | escape -}}"
 >
   <div class="header__content{% if padding_top != blank or padding_top_mobile != blank %} header__content--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} header__content--padding-bottom{%- endif -%}">
     <div class="header__container container">
-      <div class="header__content-inner{% if menu_position == "left-center" %} header__menu-position--centered{% endif %}{% if menu != blank %} header__mobile-menu-opener-{{- menu_opener_mobile -}}{%- endif -%}">
+      <div class="header__content-inner{% if menu != blank %} header__mobile-menu-opener-{{- menu_opener_mobile -}}{%- endif -%}">
         <div class="header__logo-wrapper">
           <a href="{{ routes.root_url }}" class="header__logo">
             {{- header_logo -}}
@@ -360,6 +344,12 @@
         "label": "Menu"
       },
       {
+        "type": "text",
+        "id": "menu_opener_label",
+        "label": "Menu button label",
+        "default": "Menu"
+      },
+      {
         "type": "select",
         "id": "color_palette",
         "label": "Color palette",
@@ -388,52 +378,32 @@
         "default": "Search"
       },
       {
+        "type": "checkbox",
+        "id": "show_picker",
+        "default": true,
+        "label": "Show period picker"
+      },
+      {
+        "type": "checkbox",
+        "id": "transparent_bg",
+        "default": true,
+        "label": "Use transparent background"
+      },
+      {
+        "type": "text",
+        "id": "login_placeholder",
+        "label": "Login button label",
+        "default": "Log in"
+      },
+      {
+        "type": "text",
+        "id": "signup_placeholder",
+        "label": "Create account button label",
+        "default": "Create account"
+      },
+      {
         "type": "header",
         "content": "Desktop settings"
-      },
-      {
-        "type": "select",
-        "id": "menu_position",
-        "label": "Menu position",
-        "options": [
-          {
-            "value": "left",
-            "label": "Logo left / Menu left"
-          },
-          {
-            "value": "left-center",
-            "label": "Logo left / Menu center"
-          },
-          {
-            "value": "left-right",
-            "label": "Logo left / Menu right"
-          },
-          {
-            "value": "left-below",
-            "label": "Logo left / Menu below"
-          },
-          {
-            "value": "center-left",
-            "label": "Logo center / Menu left"
-          }
-        ],
-        "default": "left-center"
-      },
-      {
-        "type": "select",
-        "id": "menu_style",
-        "label": "Menu style",
-        "options": [
-          {
-            "value": "vertical",
-            "label": "Vertical"
-          },
-          {
-            "value": "horizontal",
-            "label": "Horizontal"
-          }
-        ],
-        "default": "horizontal"
       },
       {
         "type": "select",
@@ -494,22 +464,6 @@
           }
         ],
         "default": "left"
-      },
-      {
-        "type": "select",
-        "id": "menu_position_mobile",
-        "label": "Menu appearance",
-        "options": [
-          {
-            "value": "top",
-            "label": "Top"
-          },
-          {
-            "value": "side",
-            "label": "Side"
-          }
-        ],
-        "default": "top"
       },
       {
         "type": "select",
