--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -323,10 +323,13 @@
 
     {%- if settings.corner_radius == 'square' -%}
       --border-radius: 0;
+      --border-radius-dyna: 0;
     {%- elsif settings.corner_radius == 'rounded' -%}
       --border-radius: 4px;
+      --border-radius-dyna: 4px;
     {%- elsif settings.corner_radius == 'fully_round' -%}
       --border-radius: 50px;
+      --border-radius-dyna: 4px;
     {%- endif -%}
 
     {%- case settings.social_size -%}
