--- a/assets/header.css
+++ b/assets/header.css
@@ -69,26 +69,6 @@
   margin: 0 0 0 5px;
 }
 
-.header__login {
-  padding: 22px 24px 0;
-  color: currentColor;
-  max-width: var(--max-width);
-  margin: 0 auto;
-}
-
-.header__login-button {
-  width: 100%;
-  min-height: 58px;
-}
-
-.header__login-button svg {
-  margin: 0 12px 0 0;
-}
-
-.header__login-button.button path {
-  fill: none;
-}
-
 .header__links {
   grid-area: column-3;
   display: flex;
@@ -203,7 +183,7 @@
   font-size: 16px;
   line-height: var(--line-height-sm);
   border: 1px solid transparent;
-  border-radius: var(--border-radius);
+  border-radius: var(--border-radius-rounded);
 }
 
 .header__search-input:focus {
