--- a/assets/header.css
+++ b/assets/header.css
@@ -13,6 +13,10 @@
 	transition: top var(--animation-duration) var(--transition-function-ease-out);
 }
 
+.header__inner {
+  width: 100%;
+}
+
 .header__content--padding-top {
   padding-top: var(--padding-top-mobile);
 }
@@ -21,23 +25,27 @@
   padding-bottom: var(--padding-bottom-mobile);
 }
 
+.header__content {
+  transition: background var(--animation-duration) var(--transition-function-ease-out);
+}
+
 .header__content-inner {
   display: grid;
   grid-template-columns: max-content 1fr max-content;
-  gap: 0px 8px;
+  gap: 0px 12px;
   grid-template-areas:
-    "column-2 column-1 column-3";
+    "column-1 column-2 column-3";
   align-items: center;
 }
 
 .header__mobile-menu-opener-left {
+  grid-template-columns: 50px 1fr 50px;
   grid-template-areas:
-    "column-2 column-1 column-3";
+    "column-3 column-1";
 }
 
-.header__mobile-menu-opener-right {
-  grid-template-areas:
-    "column-1 column-3 column-2";
+.header__mobile-menu-opener-left .header__logo-wrapper {
+  text-align: center;
 }
 
 .header__logo-wrapper {
@@ -60,18 +68,23 @@
   max-height: 40px;
 }
 
-.header__nav-wrapper {
+.header__date-picker-wrapper {
   grid-area: column-2;
-  height: 100%;
+  position: absolute;
+  top: calc(100% + 16px);
+  left: 50%;
+  width: calc(100vw - var(--horizontal-padding-mobile, 16px) * 2);
+  transform: translate(-50%, 0);
+  z-index: -1;
 }
 
-.header__mobile-menu-opener-right .header__nav-wrapper {
-  margin: 0 0 0 5px;
+.header__nav-wrapper {
+  grid-area: column-3;
 }
 
 .header__links {
-  grid-area: column-3;
-  display: flex;
+  grid-area: column-4;
+  display: none;
   align-items: center;
   justify-content: flex-end;
   height: 100%;
@@ -81,9 +94,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 0 0 15px;
-  position: relative;
-  height: 100%;
+  height: 42px;
+  width: 42px;
+  margin: 0;
+  padding: 8px;
+  border: 1px solid transparent;
+  border-radius: var(--border-radius-circle);
 }
 
 .header__search-opener {
@@ -105,46 +121,58 @@
   visibility: hidden;
 	pointer-events: none;
 	margin: 0;
-	padding: 0;
 	position: absolute;
-  top: calc(100% + 8px);
-  right: -75px;
-	min-width: calc(100vw - 60px);
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, 0);
+	width: 100vw;
 	opacity: 0;
-	transition: visibility var(--animation-duration) var(--transition-function-ease-out),
-    top var(--animation-duration) var(--transition-function-ease-out),
-		opacity var(--animation-duration) var(--transition-function-ease-out);
   display: block !important;
+  height: calc(var(--body-height) - var(--header-height));
+  max-height: 0;
+  z-index: -1;
 }
 
-.touch[data-orientation='landscape'] .header__search-wrapper {
-  right: -75px;
+.header__search-inner {
+  display: flex;
+  justify-content: center;
+	padding: 18px 75px 18px 18px;
+  transform: translate(0, -100%);
+  transition: transform var(--animation-duration) var(--transition-function-ease-out);
 }
 
-.touch[data-orientation='landscape'] .header__mobile-menu-opener-left .header__search-wrapper {
-  right: -25px;
+.touch[data-orientation='landscape'] .header__date-picker-wrapper {
+  width: calc(100vw - var(--horizontal-padding-mobile, 16px) * 2 - 44px * 2);
+}
+
+.touch[data-orientation='landscape'] .header__search-inner {
+  padding-right: 119px;
+  padding-left: 62px;
 }
 
 .header__search-wrapper form {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  position: relative;
+  max-width: 720px;
 }
 
 .header__search-reset {
   position: absolute;
-  right: 0;
   top: 50%;
-  height: 100%;
-  width: 40px;
+  left: 100%;
   transform: translate(0, -50%);
+  height: 42px;
+  width: 42px;
   display: flex;
   align-items: center;
   background: none;
-  border: none;
-  border-radius: var(--border-radius);
+  border: 1px solid transparent;
+  border-radius: var(--border-radius-circle);
   cursor: pointer;
+  margin: 0 0 0 16px;
 }
 
 .header__search-reset:after,
@@ -152,7 +180,7 @@
   content: "";
   position: absolute;
   top: 50%;
-  left: 40%;
+  left: 50%;
   height: 2px;
   width: 18px;
   transform: translate(-50%, -50%) rotate(45deg);
@@ -171,7 +199,7 @@
 .header__search-input-wrapper .header__search-icon {
   position: absolute;
   top: 50%;
-  left: 10px;
+  left: 28px;
   transform: translateY(-65%);
   z-index: 1;
 }
@@ -179,11 +207,12 @@
 .header__search-input {
   min-width: 230px;
   width: 100%;
-  padding: 14px 43px;
+  padding: 18px 18px 18px 67px;
   font-size: 16px;
   line-height: var(--line-height-sm);
   border: 1px solid transparent;
-  border-radius: var(--border-radius-rounded);
+  border-radius: var(--border-radius);
+  background: transparent;
 }
 
 .header__search-input:focus {
@@ -208,45 +237,58 @@
   visibility: visible;
   pointer-events: all;
   opacity: 1;
+  max-height: var(--body-height);
+}
+
+.header__search #search-opener:checked ~ .header__search-wrapper .header__search-inner {
+  transform: translate(0, 0);
+}
+
+.header__search ~ .header__cart {
+  margin: 0 0 0 10px;
 }
 
 .header__cart {
-  margin: 0 0 0 20px;
-  min-width: 22px;
+  width: 42px;
+  height: 42px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  padding: 8px;
+  border: 1px solid transparent;
+  border-radius: var(--border-radius-circle);
 }
 
 .header__cart bq-mini-cart[initialized="true"] + i {
   display: none;
 }
 
-.header__cart .fa-spinner-third {
-  color: var(--color-secondary-1);
+.loaded .header__search-inner {
+  display: flex !important;
 }
 
-.header__mobile-menu-opener-left .header__search-wrapper {
-  right: -26px;
-}
-
-.header__mobile-menu-opener-left .header__links:not(.header__links--with-cart) .header__search-wrapper {
-  right: 14px;
-}
-
-.header__mobile-menu-opener-right .header__links:not(.header__links--with-cart) .header__search-wrapper {
-  right: -31px;
-}
-
-.loaded .header__search-wrapper {
-  display: block !important;
-}
-
-.palette-one .header__content {
+.page-scrolled .header--transparent .palette-one.header__inner .header__content,
+.palette-one.header__inner--background .header__content,
+.palette-one.header__inner--background-dynamic .header__content {
   color: var(--color-primary-1);
   background: var(--background-primary-1);
   border-bottom: 1px solid var(--color-border-1);
+}
+
+.palette-one .header__search {
+  border-color: var(--background-accent-1);
+}
+
+.palette-one .header__search-wrapper {
+  background: var(--color-primary-1-67);
+}
+
+.palette-one .header__search-inner {
+  background: var(--background-primary-1);
+}
+
+.palette-one .header__search-reset {
+  border-color: var(--color-border-1);
 }
 
 .palette-one .header__search-reset:after,
@@ -261,8 +303,7 @@
 
 .palette-one .header__search-input {
   color: var(--color-primary-1);
-  background: var(--background-primary-1);
-  border-color: var(--background-accent-1);
+  border-color: var(--color-border-1);
 }
 
 .palette-one .header__search-input::placeholder {
@@ -274,8 +315,13 @@
   box-shadow: inset 0 0 0 150px var(--background-primary-1) !important;
 }
 
-.palette-one .header__search-icon g,
 .palette-one .header__search-opener g {
+  stroke: var(--background-primary-1);
+}
+
+.palette-one .header__search-icon g,
+.palette-one.header__inner--background .header__search-opener g,
+.palette-one.header__inner--background-dynamic .header__search-opener g {
   stroke: var(--color-primary-1);
 }
 
@@ -287,10 +333,41 @@
   stroke: var(--color-outline-1-hover);
 }
 
-.palette-two .header__content {
+.palette-one .header__cart {
+  border-color: var(--background-accent-1);
+}
+
+.palette-one .header__cart .fa-spinner-third {
+  color: var(--background-primary-1);
+}
+
+.palette-one.header__inner--background .header__cart .fa-spinner-third,
+.palette-one.header__inner--background-dynamic .header__cart .fa-spinner-third {
+  color: var(--color-primary-1);
+}
+
+.page-scrolled .header--transparent .palette-two.header__inner .header__content,
+.palette-two.header__inner--background .header__content,
+.palette-two.header__inner--background-dynamic .header__content {
   color: var(--color-primary-2);
   background: var(--background-primary-2);
   border-bottom: 1px solid var(--color-border-2);
+}
+
+.palette-two .header__search {
+  border-color: var(--background-accent-2);
+}
+
+.palette-two .header__search-wrapper {
+  background: var(--color-primary-2-67);
+}
+
+.palette-two .header__search-inner {
+  background: var(--background-primary-2);
+}
+
+.palette-two .header__search-reset {
+  border-color: var(--color-border-2);
 }
 
 .palette-two .header__search-reset:after,
@@ -305,8 +382,7 @@
 
 .palette-two .header__search-input {
   color: var(--color-primary-2);
-  background: var(--background-primary-2);
-  border-color: var(--background-accent-2);
+  border-color: var(--color-border-2);
 }
 
 .palette-two .header__search-input::placeholder {
@@ -318,8 +394,13 @@
   box-shadow: inset 0 0 0 150px var(--background-primary-2) !important;
 }
 
-.palette-two .header__search-icon g,
 .palette-two .header__search-opener g {
+  stroke: var(--background-primary-2);
+}
+
+.palette-two .header__search-icon g,
+.palette-two.header__inner--background .header__search-opener g,
+.palette-two.header__inner--background-dynamic .header__search-opener g {
   stroke: var(--color-primary-2);
 }
 
@@ -331,26 +412,283 @@
   stroke: var(--color-outline-2-hover);
 }
 
-.palette-two .header__cart .bq-icon-cart::before {
+.palette-two .header__cart {
+  border-color: var(--background-accent-2);
+}
+
+.palette-two .header__cart .fa-spinner-third {
+  color: var(--background-primary-2);
+}
+
+.palette-two.header__inner--background .header__cart .fa-spinner-third,
+.palette-two.header__inner--background-dynamic .header__cart .fa-spinner-third {
   color: var(--color-primary-2);
 }
 
-.palette-two .bq-cart-button:hover .bq-icon-cart::before {
-  color: var(--color-outline-2-hover);
+.page-scrolled .header--transparent .palette-three.header__inner .header__content,
+.palette-three.header__inner--background .header__content,
+.palette-three.header__inner--background-dynamic .header__content {
+  color: var(--color-primary-3);
+  background: var(--background-primary-3);
+  border-bottom: 1px solid var(--color-border-3);
 }
 
-.palette-two .bq-cart-button__line-count {
-  color: var(--color-outline-2) !important;
+.palette-three .header__search {
+  border-color: var(--background-accent-3);
 }
 
-@media (min-width: 576px) {
-  .header__search-wrapper {
-    right: -25px;
-    min-width: calc(100vw - 160px);
+.palette-three .header__search-wrapper {
+  background: var(--color-primary-3-67);
+}
+
+.palette-three .header__search-inner {
+  background: var(--background-primary-3);
+}
+
+.palette-three .header__search-reset {
+  border-color: var(--color-border-3);
+}
+
+.palette-three .header__search-reset:after,
+.palette-three .header__search-reset:before {
+  background: var(--color-primary-3);
+}
+
+.palette-three .header__search-reset:hover:after,
+.palette-three .header__search-reset:hover:before {
+  background: var(--color-outline-3-hover);
+}
+
+.palette-three .header__search-input {
+  color: var(--color-primary-3);
+  border-color: var(--color-border-3);
+}
+
+.palette-three .header__search-input::placeholder {
+  color: var(--color-placeholder-3);
+}
+
+.palette-three .header__search-input:-webkit-autofill,
+.palette-three .header__search-input:autofill {
+  box-shadow: inset 0 0 0 150px var(--background-primary-3) !important;
+}
+
+.palette-three .header__search-opener g {
+  stroke: var(--background-primary-3);
+}
+
+.palette-three .header__search-icon g,
+.palette-three.header__inner--background .header__search-opener g,
+.palette-three.header__inner--background-dynamic .header__search-opener g {
+  stroke: var(--color-primary-3);
+}
+
+.palette-three .header__search #search-opener:checked ~ .header__search-opener g {
+  stroke: var(--color-outline-3);
+}
+
+.palette-three .header__search-opener:hover g {
+  stroke: var(--color-outline-3-hover);
+}
+
+.palette-three .header__cart {
+  border-color: var(--background-accent-3);
+}
+
+.palette-three .header__cart .fa-spinner-third {
+  color: var(--background-primary-3);
+}
+
+.palette-three.header__inner--background .header__cart .fa-spinner-third,
+.palette-three.header__inner--background-dynamic .header__cart .fa-spinner-third {
+  color: var(--color-primary-3);
+}
+
+.page-scrolled .header--transparent .palette-four.header__inner .header__content,
+.palette-four.header__inner--background .header__content,
+.palette-four.header__inner--background-dynamic .header__content {
+  color: var(--color-primary-4);
+  background: var(--background-primary-4);
+  border-bottom: 1px solid var(--color-border-4);
+}
+
+.palette-four .header__search {
+  border-color: var(--background-accent-4);
+}
+
+.palette-four .header__search-wrapper {
+  background: var(--color-primary-4-67);
+}
+
+.palette-four .header__search-inner {
+  background: var(--background-primary-4);
+}
+
+.palette-four .header__search-reset {
+  border-color: var(--color-border-4);
+}
+
+.palette-four .header__search-reset:after,
+.palette-four .header__search-reset:before {
+  background: var(--color-primary-4);
+}
+
+.palette-four .header__search-reset:hover:after,
+.palette-four .header__search-reset:hover:before {
+  background: var(--color-outline-4-hover);
+}
+
+.palette-four .header__search-input {
+  color: var(--color-primary-4);
+  border-color: var(--color-border-4);
+}
+
+.palette-four .header__search-input::placeholder {
+  color: var(--color-placeholder-4);
+}
+
+.palette-four .header__search-input:-webkit-autofill,
+.palette-four .header__search-input:autofill {
+  box-shadow: inset 0 0 0 150px var(--background-primary-4) !important;
+}
+
+.palette-four .header__search-opener g {
+  stroke: var(--background-primary-4);
+}
+
+.palette-four .header__search-icon g,
+.palette-four.header__inner--background .header__search-opener g,
+.palette-four.header__inner--background-dynamic .header__search-opener g {
+  stroke: var(--color-primary-4);
+}
+
+.palette-four .header__search #search-opener:checked ~ .header__search-opener g {
+  stroke: var(--color-outline-4);
+}
+
+.palette-four .header__search-opener:hover g {
+  stroke: var(--color-outline-4-hover);
+}
+
+.palette-four .header__cart {
+  border-color: var(--background-accent-4);
+}
+
+.palette-four .header__cart .fa-spinner-third {
+  color: var(--background-primary-4);
+}
+
+.palette-four.header__inner--background .header__cart .fa-spinner-third,
+.palette-four.header__inner--background-dynamic .header__cart .fa-spinner-third {
+  color: var(--color-primary-4);
+}
+
+.page-scrolled .header--transparent .palette-five.header__inner .header__content,
+.palette-five.header__inner--background .header__content,
+.palette-five.header__inner--background-dynamic .header__content {
+  color: var(--color-primary-5);
+  background: var(--background-primary-5);
+  border-bottom: 1px solid var(--color-border-5);
+}
+
+.palette-five .header__search {
+  border-color: var(--background-accent-5);
+}
+
+.palette-five .header__search-wrapper {
+  background: var(--color-primary-5-67);
+}
+
+.palette-five .header__search-inner {
+  background: var(--background-primary-5);
+}
+
+.palette-five .header__search-reset {
+  border-color: var(--color-border-5);
+}
+
+.palette-five .header__search-reset:after,
+.palette-five .header__search-reset:before {
+  background: var(--color-primary-5);
+}
+
+.palette-five .header__search-reset:hover:after,
+.palette-five .header__search-reset:hover:before {
+  background: var(--color-outline-5-hover);
+}
+
+.palette-five .header__search-input {
+  color: var(--color-primary-5);
+  background: var(--background-primary-5);
+  border-color: var(--color-border-5);
+}
+
+.palette-five .header__search-input::placeholder {
+  color: var(--color-placeholder-5);
+}
+
+.palette-five .header__search-input:-webkit-autofill,
+.palette-five .header__search-input:autofill {
+  box-shadow: inset 0 0 0 150px var(--background-primary-5) !important;
+}
+
+.palette-five .header__search-opener g {
+  stroke: var(--background-primary-5);
+}
+
+.palette-five .header__search-icon g,
+.palette-five.header__inner--background .header__search-opener g,
+.palette-five.header__inner--background-dynamic .header__search-opener g {
+  stroke: var(--color-primary-5);
+}
+
+.palette-five .header__search #search-opener:checked ~ .header__search-opener g {
+  stroke: var(--color-outline-5);
+}
+
+.palette-five .header__search-opener:hover g {
+  stroke: var(--color-outline-5-hover);
+}
+
+.palette-five .header__cart {
+  border-color: var(--background-accent-5);
+}
+
+.palette-five .header__cart .fa-spinner-third {
+  color: var(--background-primary-5);
+}
+
+.palette-five.header__inner--background .header__cart .fa-spinner-third,
+.palette-five.header__inner--background-dynamic .header__cart .fa-spinner-third {
+  color: var(--color-primary-5);
+}
+
+@media (min-width: 768px) {
+  .header__links {
+    display: flex;
   }
 
-  .header__mobile-menu-opener-left .header__search-wrapper {
-    right: -5px;
+  .header__content-inner {
+    grid-template-columns: max-content 1fr max-content;
+    grid-template-areas:
+      "column-1 column-2 column-3";
+  }
+
+  .header__content-inner--with-search,
+  .header__content-inner--with-cart {
+    grid-template-columns: max-content 1fr max-content max-content;
+    grid-template-areas:
+      "column-1 column-2 column-3 column-4";
+  }
+}
+
+@media (min-width: 992px) {
+  .header__date-picker-wrapper {
+    position: static;
+    width: auto;
+    transform: translate(0, 0);
+    padding: 0 10px;
+    z-index: 0;
   }
 }
 
@@ -361,9 +699,5 @@
 
   .header__content--padding-bottom {
     padding-bottom: var(--padding-bottom);
-  }
-
-  .header__search-wrapper {
-    min-width: 800px;
   }
 }
