--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -17,16 +17,14 @@
 
     {% include 'page-metadata' %}
 
-    {%- if template == "index" -%}
-      <script>
-        // Loading the IFrame Player API code asynchronously.
-        const tag = document.createElement('script');
-        tag.src = "https://www.youtube.com/iframe_api";
+    <script>
+      // Loading the IFrame Player API code asynchronously.
+      const tag = document.createElement('script');
+      tag.src = "https://www.youtube.com/iframe_api";
 
-        const firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-      </script>
-    {%- endif -%}
+      const firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+    </script>
   </head>
   <body>
 
@@ -48,6 +46,7 @@
     <script src="{{ "mega-menu.js" | asset_url }}" defer></script>
     <script src="{{ "carousel.js" | asset_url }}" defer></script>
     <script src="{{ "images.js" | asset_url }}" defer></script>
+    <script src="{{ "search.js" | asset_url }}" defer></script>
 
     {%- if settings.accent_background != blank -%}
       {%- assign background_accent = settings.accent_background -%}
