--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -10,7 +10,7 @@
 {%- assign color_palette         = section.settings.color_palette -%}
 {%- assign show_search           = section.settings.show_search -%}
 {%- assign search_placeholder    = section.settings.search_placeholder -%}
-{%- assign show_picker           = section.settings.show_picker -%}
+{%- assign show_datepicker       = section.settings.show_datepicker -%}
 {%- assign transparent_bg        = section.settings.transparent_bg -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -22,7 +22,6 @@
 {%- assign logout_placeholder    = section.settings.logout_placeholder -%}
 {%- assign signup_placeholder    = section.settings.signup_placeholder -%}
 {%- assign follow_us             = section.settings.follow_us -%}
-{%- assign image_placeholder     = settings.image_placeholder -%}
 {%- assign facebook              = settings.social_facebook_link -%}
 {%- assign instagram             = settings.social_instagram_link -%}
 {%- assign twitter               = settings.social_twitter_link -%}
@@ -76,6 +75,13 @@
 {%- include 'variables-mini-cart' -%}
 {% comment %} CSS variables end {% endcomment %}
 
+{%- if show_datepicker -%}
+  {%- render 'background-accent',
+      color_palette: color_palette,
+      settings: settings
+   -%}
+{%- endif -%}
+
 {% comment %} Logo component {% endcomment %}
 {%- capture header_logo -%}
   {%- if logo.url != blank -%}
@@ -123,7 +129,7 @@
   </div>
 {%- endcapture -%}
 
-{% comment %} Mobile menu social component {% endcomment %}
+{% comment %} Menu socials and payments icons component {% endcomment %}
 {%- capture menu_bottom -%}
   <div class="menu__bottom">
     {{- header_login -}}
@@ -272,22 +278,24 @@
     </label>
 
     <div class="header__search-wrapper" style="display: none">
-      <form id="search" action="{{ routes.search_url }}" role="search">
-        <div class="header__search-input-wrapper">
-          <i class="header__search-icon">
-            {%- render 'icon-search' -%}
-          </i>
-          <input type="search" name="q" class="header__search-input" placeholder="{{- search_placeholder -}}">
-        </div>
-        <span class="header__search-reset"></span>
-      </form>
+      <div class="header__search-inner">
+        <form id="search" action="{{ routes.search_url }}" role="search">
+          <div class="header__search-input-wrapper">
+            <i class="header__search-icon">
+              {%- render 'icon-search' -%}
+            </i>
+            <input type="search" name="q" class="header__search-input" placeholder="{{- search_placeholder -}}">
+          </div>
+          <span class="header__search-reset"></span>
+        </form>
+      </div>
     </div>
   </div>
 {%- endcapture -%}
 
 {% comment %} Right side buttons component {% endcomment %}
 {%- capture header_links -%}
-  <div class="header__links{% if show_search %} header__links--with-search{% endif %}{% if show_mini_cart %} header__links--with-cart{%- endif -%}">
+  <div class="header__links">
     {%- if show_search -%}
       {{- header_search -}}
     {%- endif -%}
@@ -302,35 +310,46 @@
 {%- endcapture -%}
 
 <div
-  class="header__inner{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}"
+  class="header__inner{% unless transparent_bg %} header__inner--background{% endunless %}{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}"
   style="{{- variables | escape -}}"
 >
   <div class="header__content{% if padding_top != blank or padding_top_mobile != blank %} header__content--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} header__content--padding-bottom{%- endif -%}">
     <div class="header__container container">
-      <div class="header__content-inner{% if menu != blank %} header__mobile-menu-opener-{{- menu_opener_mobile -}}{%- endif -%}">
+      <div class="header__content-inner{% if menu != blank %} header__mobile-menu-opener-{{- menu_opener_mobile -}}{% endif %}{% if show_search %} header__content-inner--with-search{% endif %}{% if show_mini_cart %} header__content-inner--with-cart{%- endif -%}">
         <div class="header__logo-wrapper">
           <a href="{{ routes.root_url }}" class="header__logo">
             {{- header_logo -}}
           </a>
         </div>
 
+        <div class="header__date-picker-wrapper">
+          {%- if show_datepicker -%}
+            {%- render 'date-picker',
+                key: section.key,
+                color_palette: color_palette,
+                background: background_accent,
+                settings: settings
+            -%}
+          {%- endif -%}
+        </div>
+
         {{- header_menu -}}
 
-        {{- header_links -}}
+        {%- if show_search or show_mini_cart -%}
+          {{- header_links -}}
+        {%- endif -%}
 
       </div>
     </div>
   </div>
 </div>
 
-<script>
-  const header = document.querySelector('.header');
-  {% if sticky_header %}
+{% if sticky_header %}
+  <script>
+    const header = document.querySelector('.header');
     header.classList.add('header--sticky')
-  {% else %}
-    header.classList.add('header--not-sticky')
-  {% endif %}
-</script>
+  </script>
+{% endif %}
 
 {% schema %}
   {
@@ -396,7 +415,7 @@
       },
       {
         "type": "checkbox",
-        "id": "show_picker",
+        "id": "show_datepicker",
         "default": true,
         "label": "Show period picker"
       },
